parser/PlayParser.py
# Generated from /Users/fxxing/git/play/parser/Play.g4 by ANTLR 4.7.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *
from typing.io import TextIO




class PlayParser(Parser):
    grammarFileName = "Play.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'boolean'", "'byte'", "'short'", "'int'",
                    "'long'", "'float'", "'double'", "'import'", "'class'",
                    "'interface'", "'def'", "'static'", "'native'", "'this'",
                    "'super'", "'if'", "'else'", "'elif'", "'in'", "'while'",
                    "'break'", "'continue'", "'return'", "'try'", "'catch'",
                    "'finally'", "'throw'", "'throws'", "'as'", "'new'",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'",
                    "','", "'.'", "'::'", "':'", "'->'", "'@'", "'+'",
                    "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'",
                    "'<'", "'<='", "'>='", "'&&'", "'||'", "'!'", "'<<'",
                    "'>>'", "'>>>'", "'&'", "'|'", "'~'", "'^'", "'='",
                    "'+='", "'-='", "'*='", "'/='", "'%='", "'&&='", "'||='",
                    "'&='", "'|='", "'^='", "'<<='", "'>>='", "'>>>='"]

    symbolicNames = ["<INVALID>", "BOOLEAN", "BYTE", "SHORT", "INT", "LONG",
                     "FLOAT", "DOUBLE", "IMPORT", "CLASS", "INTERFACE",
                     "DEF", "STATIC", "NATIVE", "THIS", "SUPER", "IF",
                     "ELSE", "ELIF", "IN", "WHILE", "BREAK", "CONTINUE",
                     "RETURN", "TRY", "CATCH", "FINALLY", "THROW", "THROWS",
                     "AS", "NEW", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL",
                     "BINARY_LITERAL", "FLOAT_LITERAL", "BOOL_LITERAL",
                     "BYTE_LITERAL", "STRING_LITERAL", "NULL_LITERAL",
                     "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK",
                     "RBRACK", "COMMA", "DOT", "COLONCOLON", "COLON", "ARROW",
                     "AT", "ADD", "SUB", "MUL", "DIV", "MOD", "EQUAL",
                     "NOTEQUAL", "GT", "LT", "LE", "GE", "AND", "OR", "BANG",
                     "LSHIFT", "RSHIFT", "URSHIFT", "BITAND", "BITOR",
                     "TILDE", "CARET", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN",
                     "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN",
                     "OR_ASSIGN", "BITAND_ASSIGN", "BITOR_ASSIGN", "BITXOR_ASSIGN",
                     "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN",
                     "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER"]

    RULE_compilationUnit = 0
    RULE_qualifiedName = 1
    RULE_typeName = 2
    RULE_literal = 3
    RULE_importDeclaration = 4
    RULE_classDeclaration = 5
    RULE_memberDeclaration = 6
    RULE_classTypeList = 7
    RULE_classType = 8
    RULE_methodDeclaration = 9
    RULE_parameters = 10
    RULE_variable = 11
    RULE_fieldDeclaration = 12
    RULE_block = 13
    RULE_statement = 14
    RULE_ifStatement = 15
    RULE_elifClause = 16
    RULE_elseClause = 17
    RULE_whileStatement = 18
    RULE_returnStatement = 19
    RULE_breakStatement = 20
    RULE_continueStatement = 21
    RULE_assignStatement = 22
    RULE_expression = 23
    RULE_logicalOrExpression = 24
    RULE_logicalAndExpression = 25
    RULE_inclusiveOrExpression = 26
    RULE_exclusiveOrExpression = 27
    RULE_andExpression = 28
    RULE_equalityExpression = 29
    RULE_relationalExpression = 30
    RULE_shiftExpression = 31
    RULE_additiveExpression = 32
    RULE_multiplicativeExpression = 33
    RULE_castExpression = 34
    RULE_unaryExpression = 35
    RULE_primaryExpression = 36
    RULE_classCreation = 37
    RULE_methodCall = 38
    RULE_expressionList = 39

    ruleNames = ["compilationUnit", "qualifiedName", "typeName", "literal",
                 "importDeclaration", "classDeclaration", "memberDeclaration",
                 "classTypeList", "classType", "methodDeclaration", "parameters",
                 "variable", "fieldDeclaration", "block", "statement",
                 "ifStatement", "elifClause", "elseClause", "whileStatement",
                 "returnStatement", "breakStatement", "continueStatement",
                 "assignStatement", "expression", "logicalOrExpression",
                 "logicalAndExpression", "inclusiveOrExpression", "exclusiveOrExpression",
                 "andExpression", "equalityExpression", "relationalExpression",
                 "shiftExpression", "additiveExpression", "multiplicativeExpression",
                 "castExpression", "unaryExpression", "primaryExpression",
                 "classCreation", "methodCall", "expressionList"]

    EOF = Token.EOF
    BOOLEAN = 1
    BYTE = 2
    SHORT = 3
    INT = 4
    LONG = 5
    FLOAT = 6
    DOUBLE = 7
    IMPORT = 8
    CLASS = 9
    INTERFACE = 10
    DEF = 11
    STATIC = 12
    NATIVE = 13
    THIS = 14
    SUPER = 15
    IF = 16
    ELSE = 17
    ELIF = 18
    IN = 19
    WHILE = 20
    BREAK = 21
    CONTINUE = 22
    RETURN = 23
    TRY = 24
    CATCH = 25
    FINALLY = 26
    THROW = 27
    THROWS = 28
    AS = 29
    NEW = 30
    DECIMAL_LITERAL = 31
    HEX_LITERAL = 32
    OCT_LITERAL = 33
    BINARY_LITERAL = 34
    FLOAT_LITERAL = 35
    BOOL_LITERAL = 36
    BYTE_LITERAL = 37
    STRING_LITERAL = 38
    NULL_LITERAL = 39
    LPAREN = 40
    RPAREN = 41
    LBRACE = 42
    RBRACE = 43
    LBRACK = 44
    RBRACK = 45
    COMMA = 46
    DOT = 47
    COLONCOLON = 48
    COLON = 49
    ARROW = 50
    AT = 51
    ADD = 52
    SUB = 53
    MUL = 54
    DIV = 55
    MOD = 56
    EQUAL = 57
    NOTEQUAL = 58
    GT = 59
    LT = 60
    LE = 61
    GE = 62
    AND = 63
    OR = 64
    BANG = 65
    LSHIFT = 66
    RSHIFT = 67
    URSHIFT = 68
    BITAND = 69
    BITOR = 70
    TILDE = 71
    CARET = 72
    ASSIGN = 73
    ADD_ASSIGN = 74
    SUB_ASSIGN = 75
    MUL_ASSIGN = 76
    DIV_ASSIGN = 77
    MOD_ASSIGN = 78
    AND_ASSIGN = 79
    OR_ASSIGN = 80
    BITAND_ASSIGN = 81
    BITOR_ASSIGN = 82
    BITXOR_ASSIGN = 83
    LSHIFT_ASSIGN = 84
    RSHIFT_ASSIGN = 85
    URSHIFT_ASSIGN = 86
    WS = 87
    COMMENT = 88
    LINE_COMMENT = 89
    IDENTIFIER = 90

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(PlayParser.ClassDeclarationContext, 0)

        def EOF(self):
            return self.getToken(PlayParser.EOF, 0)

        def importDeclaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PlayParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(PlayParser.ImportDeclarationContext, i)

        def getRuleIndex(self):
            return PlayParser.RULE_compilationUnit

    def compilationUnit(self):

        localctx = PlayParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PlayParser.IMPORT:
                self.state = 80
                self.importDeclaration()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.classDeclaration()
            self.state = 87
            self.match(PlayParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QualifiedNameContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i: int = None):
            if i is None:
                return self.getTokens(PlayParser.IDENTIFIER)
            else:
                return self.getToken(PlayParser.IDENTIFIER, i)

        def DOT(self, i: int = None):
            if i is None:
                return self.getTokens(PlayParser.DOT)
            else:
                return self.getToken(PlayParser.DOT, i)

        def getRuleIndex(self):
            return PlayParser.RULE_qualifiedName

    def qualifiedName(self):

        localctx = PlayParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_qualifiedName)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PlayParser.IDENTIFIER)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PlayParser.DOT:
                self.state = 90
                self.match(PlayParser.DOT)
                self.state = 91
                self.match(PlayParser.IDENTIFIER)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(PlayParser.BOOLEAN, 0)

        def BYTE(self):
            return self.getToken(PlayParser.BYTE, 0)

        def SHORT(self):
            return self.getToken(PlayParser.SHORT, 0)

        def INT(self):
            return self.getToken(PlayParser.INT, 0)

        def LONG(self):
            return self.getToken(PlayParser.LONG, 0)

        def FLOAT(self):
            return self.getToken(PlayParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(PlayParser.DOUBLE, 0)

        def classType(self):
            return self.getTypedRuleContext(PlayParser.ClassTypeContext, 0)

        def getRuleIndex(self):
            return PlayParser.RULE_typeName

    def typeName(self):

        localctx = PlayParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeName)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PlayParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(PlayParser.BOOLEAN)
                pass
            elif token in [PlayParser.BYTE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(PlayParser.BYTE)
                pass
            elif token in [PlayParser.SHORT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(PlayParser.SHORT)
                pass
            elif token in [PlayParser.INT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.match(PlayParser.INT)
                pass
            elif token in [PlayParser.LONG]:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.match(PlayParser.LONG)
                pass
            elif token in [PlayParser.FLOAT]:
                self.enterOuterAlt(localctx, 6)
                self.state = 102
                self.match(PlayParser.FLOAT)
                pass
            elif token in [PlayParser.DOUBLE]:
                self.enterOuterAlt(localctx, 7)
                self.state = 103
                self.match(PlayParser.DOUBLE)
                pass
            elif token in [PlayParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self.classType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_LITERAL(self):
            return self.getToken(PlayParser.DECIMAL_LITERAL, 0)

        def HEX_LITERAL(self):
            return self.getToken(PlayParser.HEX_LITERAL, 0)

        def OCT_LITERAL(self):
            return self.getToken(PlayParser.OCT_LITERAL, 0)

        def BINARY_LITERAL(self):
            return self.getToken(PlayParser.BINARY_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(PlayParser.FLOAT_LITERAL, 0)

        def BYTE_LITERAL(self):
            return self.getToken(PlayParser.BYTE_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(PlayParser.STRING_LITERAL, 0)

        def BOOL_LITERAL(self):
            return self.getToken(PlayParser.BOOL_LITERAL, 0)

        def NULL_LITERAL(self):
            return self.getToken(PlayParser.NULL_LITERAL, 0)

        def getRuleIndex(self):
            return PlayParser.RULE_literal

    def literal(self):

        localctx = PlayParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literal)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << PlayParser.DECIMAL_LITERAL) | (1 << PlayParser.HEX_LITERAL) | (1 << PlayParser.OCT_LITERAL) | (1 << PlayParser.BINARY_LITERAL) | (1 << PlayParser.FLOAT_LITERAL) | (
                    1 << PlayParser.BOOL_LITERAL) | (1 << PlayParser.BYTE_LITERAL) | (1 << PlayParser.STRING_LITERAL) | (1 << PlayParser.NULL_LITERAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(PlayParser.IMPORT, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(PlayParser.QualifiedNameContext, 0)

        def getRuleIndex(self):
            return PlayParser.RULE_importDeclaration

    def importDeclaration(self):

        localctx = PlayParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(PlayParser.IMPORT)
            self.state = 110
            self.qualifiedName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlayParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(PlayParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PlayParser.RBRACE, 0)

        def CLASS(self):
            return self.getToken(PlayParser.CLASS, 0)

        def INTERFACE(self):
            return self.getToken(PlayParser.INTERFACE, 0)

        def NATIVE(self):
            return self.getToken(PlayParser.NATIVE, 0)

        def COLON(self):
            return self.getToken(PlayParser.COLON, 0)

        def classTypeList(self):
            return self.getTypedRuleContext(PlayParser.ClassTypeListContext, 0)

        def memberDeclaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PlayParser.MemberDeclarationContext)
            else:
                return self.getTypedRuleContext(PlayParser.MemberDeclarationContext, i)

        def getRuleIndex(self):
            return PlayParser.RULE_classDeclaration

    def classDeclaration(self):

        localctx = PlayParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDeclaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PlayParser.NATIVE:
                self.state = 112
                self.match(PlayParser.NATIVE)

            self.state = 115
            _la = self._input.LA(1)
            if not (_la == PlayParser.CLASS or _la == PlayParser.INTERFACE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            self.match(PlayParser.IDENTIFIER)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PlayParser.COLON:
                self.state = 117
                self.match(PlayParser.COLON)
                self.state = 118
                self.classTypeList()

            self.state = 121
            self.match(PlayParser.LBRACE)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PlayParser.DEF) | (1 << PlayParser.STATIC) | (1 << PlayParser.NATIVE))) != 0) or _la == PlayParser.IDENTIFIER:
                self.state = 122
                self.memberDeclaration()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(PlayParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MemberDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclaration(self):
            return self.getTypedRuleContext(PlayParser.MethodDeclarationContext, 0)

        def fieldDeclaration(self):
            return self.getTypedRuleContext(PlayParser.FieldDeclarationContext, 0)

        def getRuleIndex(self):
            return PlayParser.RULE_memberDeclaration

    def memberDeclaration(self):

        localctx = PlayParser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_memberDeclaration)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PlayParser.DEF, PlayParser.STATIC, PlayParser.NATIVE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.methodDeclaration()
                pass
            elif token in [PlayParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.fieldDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassTypeListContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classType(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PlayParser.ClassTypeContext)
            else:
                return self.getTypedRuleContext(PlayParser.ClassTypeContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(PlayParser.COMMA)
            else:
                return self.getToken(PlayParser.COMMA, i)

        def getRuleIndex(self):
            return PlayParser.RULE_classTypeList

    def classTypeList(self):

        localctx = PlayParser.ClassTypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classTypeList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.classType()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PlayParser.COMMA:
                self.state = 135
                self.match(PlayParser.COMMA)
                self.state = 136
                self.classType()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassTypeContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlayParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PlayParser.RULE_classType

    def classType(self):

        localctx = PlayParser.ClassTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_classType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(PlayParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PlayParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(PlayParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(PlayParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PlayParser.RPAREN, 0)

        def NATIVE(self):
            return self.getToken(PlayParser.NATIVE, 0)

        def STATIC(self):
            return self.getToken(PlayParser.STATIC, 0)

        def parameters(self):
            return self.getTypedRuleContext(PlayParser.ParametersContext, 0)

        def ARROW(self):
            return self.getToken(PlayParser.ARROW, 0)

        def typeName(self):
            return self.getTypedRuleContext(PlayParser.TypeNameContext, 0)

        def block(self):
            return self.getTypedRuleContext(PlayParser.BlockContext, 0)

        def getRuleIndex(self):
            return PlayParser.RULE_methodDeclaration

    def methodDeclaration(self):

        localctx = PlayParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodDeclaration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PlayParser.NATIVE:
                self.state = 144
                self.match(PlayParser.NATIVE)

            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PlayParser.STATIC:
                self.state = 147
                self.match(PlayParser.STATIC)

            self.state = 150
            self.match(PlayParser.DEF)
            self.state = 151
            self.match(PlayParser.IDENTIFIER)
            self.state = 152
            self.match(PlayParser.LPAREN)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PlayParser.IDENTIFIER:
                self.state = 153
                self.parameters()

            self.state = 156
            self.match(PlayParser.RPAREN)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == PlayParser.ARROW:
                self.state = 157
                self.match(PlayParser.ARROW)
                self.state = 158
                self.typeName()
